[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "math-toolkit-tr"
version = "0.1.0"
description = "A lightweight math library by Andac Berkay."
authors = [
  { name="Andac Berkay", email="none@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["math", "toolkit", "utilities", "numbers"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/andacberkaye/math-toolkit"
"Bug Tracker" = "https://github.com/andacberkaye/math-toolkit/issues"
